crates/tsuno-driver/tests/fixtures/snapshots/pass/tracks_mut_ref_final_value_in_contract.rs
//@ req "true"
//@ ens "{x}.fin == 2"
fn set_to_two(x: &mut i32) {
    *x = 2;
}

fn main() {
    let mut x = 0;
    set_to_two(&mut x);
}
