crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_prophecy_interpolation.rs
//@ req "true"
//@ ens "{^:x} == 2"
fn set_to_two(x: &mut i32) {
    *x = 3;
}

fn main() {}
